--- a/DailyTask.html
+++ b/DailyTask.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1></h1>
-	<script type="text/javascript" src="Daily.js"></script>
+	
 
 	<div>
 		<form>
@@ -20,6 +20,13 @@
 			<input type="text" name="deadLine">
 			<button type="button" id="addButton">add</button>
 		</form>
+    <div>
+    	<ul id ="list">
+    		
+    	</ul>
+    </div>
+
 	</div>
+	<script type="text/javascript" src="Daily.js"></script>
 </body>
 </html>
