--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Daily Task</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="Daily.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 		<h1 >Daily Task App</h1>
-
-   	<div  class="add-container" >
-      <label> Add Task With Description</label>
+	  
+	<div  class="add-container" >
+	
+   
+      <label> Add Task </label>
    		<input type="text" id="input-task">
       <br>
+		 <label> Description</label>
+   		<input type="text" id="input-desc">
+      <br>
+			
+		<br>
+		<label>Add the date</label>
+		 <input type="date"  id="date">
   
-   		<button type="button"  id="add-task"> add </button>
-   	</div>
+   	<button  type="submit"  id="add-task"> add </button>
 
+		  	</div>
    	<div id="divlist">
    		<ul id="list">
    			
