--- a/DailyTask.html
+++ b/DailyTask.html
@@ -1,25 +1,110 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Daily Task app </title>
-	<link rel="stylesheet" type="text/css" href="Daily.css">
-</head>
-<body>
-	<h1></h1>
-	<script type="text/javascript" src="Daily.js"></script>
+  <head>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+	</script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Daily Task</title>
+    <link href="test.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+		<h1 >Daily Task App</h1>
+	  
+	<div  class="add-container" >
+	
+   
+      <label> Add Task </label>
+   		<input type="text" id="input-task">
+      <br>
+		 <label> Description</label>
+   		<input type="text" id="input-desc">
+      <br>
+			
+		<br>
+		<label>Add Time</label>
+<!--		 <input type="date"  id="date">-->
 
-	<div>
-		<form>
-			<label>the task name</label>
-			<input type="text" name="task" >
-			<br>
-			<label>the task discreption</label>
-			<input type="text" name="discreption">
-			<br>
-			<label>the task dead line</label>
-			<input type="text" name="deadLine">
-			<button type="button" id="addButton">add</button>
-		</form>
-	</div>
-</body>
+		
+		<form action="/action_page.php">
+  <label for="houre">select an houre:</label>
+  <select name="houre" id="houre">
+	  
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    <option value="11">11</option>
+    <option value="12">12</option>
+    <option value="13">13</option>
+    <option value="14">14</option>
+    <option value="15">15</option>
+    <option value="16">16</option>
+    <option value="17">17</option>
+    <option value="18">18</option>
+    <option value="19">19</option>
+    <option value="20">20</option>
+    <option value="21">21</option>
+    <option value="22">22</option>
+    <option value="23">23</option>
+    <option value="24">24</option>
+   
+  </select>
+			<label for="min">minutes:</label>
+  <select name="min" id="min">
+	  
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    <option value="11">11</option>
+    <option value="12">12</option>
+    <option value="13">13</option>
+    <option value="14">14</option>
+    <option value="15">15</option>
+    <option value="16">16</option>
+    <option value="17">17</option>
+    <option value="18">18</option>
+    <option value="19">19</option>
+    <option value="20">20</option>
+    <option value="21">21</option>
+    <option value="22">22</option>
+    <option value="23">23</option>
+    <option value="24">24</option>
+   
+  </select>
+  <br><br>
+<!--  <input type="submit" value="Submit">-->
+</form>
+		
+			
+		 
+
+
+   	<button  type="submit"  id="add-task"> add </button>
+
+		  	</div>
+   	<div id="divlist">
+   		<ul id="list">
+   			
+   		</ul>
+			<button  onclick="clear()" type="button"  id="clear"> clear all the tasks</button>
+   		
+   	</div>
+    <script src="test.js"></script>
+  </body>
 </html>
+
