--- a/test.html
+++ b/test.html
@@ -2,57 +2,45 @@
 <html>
   <head>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-		</script>
-
+	</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Daily Task</title>
-    <link href="Daily.css" rel="stylesheet" type="text/css" />
+    <link href="test.css" rel="stylesheet" type="text/css" />
   </head>
+	
   <body>
 		<h1 >Daily Task App</h1>
 	  
 	<div  class="add-container" >
-	
-   
-    	  <h3> Add Task </h3>
+      	<h3> Add Task </h3>
    		<input type="text" id="input-task">
-      	<br>
+		<br>
 		 <h3> Description</h3>
    		<input type="text" id="input-desc">
-    	<br>
-			
-		<br>
-		
-<!--		 <input type="date"  id="date">-->
-
+		<br><br>
 		
 		<form action="/action_page.php">
-			<h3>Add Time</h3>
-  <label >starting houre:</label>
-
-  <select name="houre" id="houre" >
-<!--	  <input type="text" id="hooure">-->-->
-    
-  </select>
-			<label for="min">minutes:</label>
-  <select name="min" id="min">
-	  
-    
-   
-  </select>
-  <br><br>
-<!--  <input type="submit" value="Submit">-->
-</form>
-		
 			
-		 
+			<h3>Add Time</h3>
+  			<label >starting houre:</label>
 
-
+			<select name="houre" id="houre" >    
+  			</select>
+			
+			<label for="min">minutes:</label>
+  			<select name="min" id="min">
+			</select>
+			
+  			<br><br>
+			
+		</form>
+		
+		
    	<button  type="submit"  id="add-task"> add </button>
 	
-
-		  	</div>
+	  </div>
+	  
    	<div id="divlist">
    		<ul id="list">
 			
@@ -60,11 +48,10 @@
    		</ul>
 		<br>
 		<br>
-			
    		<button  onclick="clear()" type="button"  id="clear"> clear all the tasks</button>
    	</div>
 	 
-    <script src="Daily.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
 
